# Proj

./: README.md  main.py  requirements.txt
examples/: grid1.txt
gpu-kernels-lab/: .clang-format  CMakeLists.txt  CONTRIBUTING.md  README.md
gpu-kernels-lab/.github/workflows/: ci.yml
gpu-kernels-lab/bench/: main.cpp
gpu-kernels-lab/docs/: design.md  profiling.md
gpu-kernels-lab/include/: kernels.h  ops.h
gpu-kernels-lab/include/common/: cuda_utils.h  timer.h  types.h
gpu-kernels-lab/kernels/: gemm_kernels.cu  layernorm_kernels.cu  softmax_kernels.cu  stencil_kernels.cu
gpu-kernels-lab/scripts/: run_suite.sh
gpu-kernels-lab/src/: reference_ops.cpp
gpu-kernels-lab/tests/: test_cpu.cpp
problems/: grid_problem.py
search/: __init__.py  astar.py  bfs.py  dfs.py  greedy.py  node.py  ucs.py
utils/: heuristics.py  metrics.py
